# Cybersecurity2022

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .zsh_history  README-Rust.md  README.md  functions_to_test.md  methods_to_test.md  playground-java.sh  playground-rust.sh  playground.sh  stdout.html  stdout.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/java/: devcontainer.json
.devcontainer/rust/: Dockerfile  devcontainer.json
.devcontainer/rust/.devcontainer/: devcontainer.json
.devcontainer/scripts/: clone-repo.sh  install-dependencies.sh  install-fuzzer.sh  install-routinator-guide.sh  install-routinator.sh  playground.sh  preserve-history.sh  submodules-backup-restore.sh
.github/workflows/: build.yml  fuzzing.yml
Lab1/: Lab1.ipynb
corpus/: delta.xml  notification.xml  snapshot.xml  ta.der
corpus/all/: example.crl  example.mft  example.roa  snapshot.xml  ta.cer  ta.tal
corpus/xml/all/: delta.xml
corpus/xml/notification/: notification.xml
docs/: ChatGPT-FuzzingWithRust.md  stdout.asciidoc  stdout.html  stdout.txt  stdout3.html
docs/logs/: 2023-02-25-22_19_05.txt  2023-02-25-22_22_31.txt  2023-02-25-22_27_28.txt  2023-02-25-22_30_08.txt  2023-02-25-22_34_39.txt  2023-02-25-22_35_52.txt  2023-02-25-22_38_15.txt  2023-02-25-22_40_13.txt  2023-02-25-22_41_44.txt  2023-02-25-22_45_58.txt  2023-02-25-22_48_32.txt  2023-02-25-22_52_32.txt  2023-02-25-22_55_35.txt  2023-02-25-22_57_09.txt
krill-diff/: Cargo.toml
krill-diff/fuzz/: Cargo.toml
krill-diff/fuzz/fuzz_targets/: fuzz_target_1.rs
routinator-diff/fuzz/: Cargo.toml
rpki-rs-diff/: Cargo.toml
rpki-rs-diff/fuzz/: Cargo.toml
rpki-rs-diff/fuzz/fuzz_targets/: fuzz_target_1.rs  fuzz_target_cert.rs  fuzz_target_idcert.rs  fuzz_target_roa.rs  fuzz_target_rrdp.rs  fuzz_target_rrdp_delta.rs  fuzz_target_rrdp_notification.rs  fuzz_target_rsync.rs
rpki-validator-3/: pom.xml
rpki-validator-3-diff/: cifuzz.yaml
rpki-validator-3/rpki-validator/: cifuzz.yaml  pom.xml
scripts/: gh-actions-results.sh  git-clean.sh  make-corpus.sh  playground-rust.sh
(+3 files in other folders)
