[package]
name = "krill-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.krill]
path = ".."
default-features = false
features = [
    # "multi-user",
    # "hsm"
    ## multi-user = [
    # "basic-cookies",
    # "jmespatch/sync",
    # "regex",
    # "oso",
    # "openidconnect",
    # "rpassword",
    # "scrypt",
    # "unicode-normalization",
    # "urlparse"
    ## ]
    ]

# [patch.crates-io.rpki]
# path = "../../rpki-rs"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
