[package]
name = "rpki-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes         = "1.0"

[dependencies.rpki]
path = ".."
# https://doc.rust-lang.org/cargo/reference/features.html
# https://dev.to/rimutaka/cargo-features-explained-with-examples-194g
default-features = false
features = [
    "ca",
    # "crypto",
    # "repository",
    # "rrdp",
    # "rtr",
    # "slurm",
    ]

# Prevent this from interfering with workspaces
[workspace]
members = [
    ".",
    # ".."
    ]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_rrdp"
path = "fuzz_targets/fuzz_target_rrdp.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_idcert"
path = "fuzz_targets/fuzz_target_idcert.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_rsync"
path = "fuzz_targets/fuzz_target_rsync.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_roa"
path = "fuzz_targets/fuzz_target_roa.rs"
test = false
doc = false

[[bin]]
name = "fuzz_target_cert"
path = "fuzz_targets/fuzz_target_cert.rs"
test = false
doc = false
